# cryptochatapp

./: .gitignore  FEEDBACK.md  README.md  TECH_STACK.md
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/admin/: handlers.rs
backend/src/auth/: challenge.rs  middleware.rs  mod.rs
backend/src/consensus/: handlers.rs  mod.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 20240101000001_create_extensions.sql  20240101000002_create_groups.sql  20240101000003_create_users.sql  20240101000004_create_auth_challenges.sql  20240101000005_create_messages.sql  20240101000006_create_forum_posts.sql  20240101000007_create_presence.sql  20240101000008_add_encryption_public_key.sql  20240101000009_add_group_id_to_forum_posts.sql  20240101000010_add_profile_to_users.sql  20240101000011_messages_become_ephemeral.sql  20240101000012_public_key_allowlist.sql  20240101000013_ephemeral_chats.sql  20240101000014_forum_title_encrypted.sql  20240101000015_mls_key_packages.sql  20240101000016_member_proposals.sql  20240101000017_device_tokens.sql  20240101000018_key_rotation.sql  README.md
backend/src/ephemeral/: handlers.rs
backend/src/forum/: handlers.rs  models.rs
backend/src/key_rotation/: handlers.rs
backend/src/mls/: delivery.rs  handlers.rs  mod.rs
backend/src/models/: group.rs  user.rs
backend/src/profiles/: handlers.rs  models.rs
backend/src/push/: handlers.rs  mod.rs  sender.rs
backend/src/relay/: ack_handler.rs  message_types.rs  mod.rs  ws_handler.rs
client/rust/mls_bridge/: Cargo.toml
client/rust/mls_bridge/src/: lib.rs
(+80 files in other folders)
