[package]
name = "mls_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
openmls = "0.8.1"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
openmls_memory_storage = "0.5"
openmls_traits = "0.5"
tls_codec = "0.4"
flutter_rust_bridge = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
